# py-ocr-helper

./: .gitignore  README.md  justfile  pyproject.toml
ocrhelper/: __init__.py
tests/: test_ocrhelper.py
